test(runtime-catalog): pin the status codes of the chain roles endpoints
The controller test asserted the return statement, so it held whatever the
method happened to do. Neither the constraints on the request nor the
mapping of the service's exceptions had a test at all: removing @Validated
from the controller, or the AbacRoleChangeException handler from
GlobalExceptionHandler, left every test green.

MockMvc over the same AOP proxy production builds now covers the answers
that matter: 204 on both writes, 400 naming the field for a missing roles
list or a blank element id, 400 naming the element for an ABAC endpoint,
and 404 for an element or a chain that does not exist. Dropping @Validated
fails the two field tests, and dropping the handler turns the ABAC one to
500.

Both requests ask for JSON. Jackson XML is on the classpath, so a request
with no Accept header negotiates to XML and the assertions on the body
would not find it.